fix: misc bug fixes